# mtg-scanner

./: .gitignore  .impeccable.md  .swiftlint.yml  AGENTS.md  CLAUDE.md  Makefile  README.md  buildServer.json  skills-lock.json
.claude/: settings.json
.github/: CODEOWNERS  dependabot.yml
docs/: agent-state.md  agent-workflow.md  architecture.md  card-detection-feature-spec.md  card-detection-orchestration.md  crop-enhancements-plan.md  development-workflow.md  feature-workflow.md  handoff-collections-feature.md  mtgjson-validation-implementation-spec.md  plan.md  project-brief.md  validation-plan.md
evals/: run_eval.py
plans/: craft-results-list-with-mossy-hammock.md  review-the-work-done-parsed-fairy.md  review-users-brettvitaz-development-mtg-recursive-book.md  teach-staged-snowglobe.md  the-auto-scan-function-is-proud-locket.md  the-swipe-to-delete-sequential-hedgehog.md
prompts/: card-correction.md  card-recognition.md
samples/: README.md
scripts/: bootstrap-api.sh  (+15 more)
services/api/: .env.example  CLAUDE.md  README.md  pyproject.toml
services/api/app/: logging_config.py  main.py  run.py  settings.py
services/api/app/api/routes/: admin.py  cards.py  recognitions.py
services/api/app/models/: recognition.py
services/api/app/services/: artifact_store.py  card_detector.py  card_validation.py  ck_prices.py  errors.py  mtgjson_index.py  openai_compat.py  recognizer.py
services/api/app/services/llm/: __init__.py  anthropic_provider.py  base.py  moonshot_provider.py  openai_provider.py  pricing.py  pricing_loop.py  pricing_refresh.py
services/api/data/pricing/: model_prices.json
services/api/mtg_scanner_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/api/tests/: conftest.py  test_admin_pricing.py  test_card_correction.py  test_card_validation.py  test_cards.py  test_ck_prices.py  test_llm_providers.py  test_logging_config.py  test_mtgjson_index.py  test_multi_card.py  test_openai_compat.py  test_pricing.py  test_pricing_loop.py  test_pricing_refresh.py  test_recognitions.py  test_recognitions_batch.py  test_recognizer.py  test_schema_examples.py  test_settings_bootstrap.py  test_startup_pricing_refresh.py
(+350 files in other folders)
