[project]
name = "mtg-scanner-api"
version = "0.1.0"
description = "FastAPI service for MTG scanner"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "opencv-python-headless>=4.9.0,<5.0.0",
  "numpy>=1.26.0,<2.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0,<9.0.0",
  "jsonschema>=4.25.0,<5.0.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
