[project]
name = "mtg-scanner-api"
version = "0.1.0"
description = "FastAPI service for MTG scanner"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "pydantic>=2.13.0,<3.0.0",
  "pydantic-settings>=2.13.1,<3.0.0",
  "python-multipart>=0.0.26,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "opencv-python-headless>=4.9.0,<5.0.0",
  "numpy>=1.26.0,<3.0.0",
  "cloudscraper>=1.2.71,<2.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10.0.0",
  "jsonschema>=4.25.0,<5.0.0",
  "mypy>=1.13.0,<2.0.0",
  "bandit>=1.8.0,<2.0.0",
]

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["cv2", "cv2.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["jsonschema", "jsonschema.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["cloudscraper", "cloudscraper.*"]
ignore_missing_imports = true

[tool.bandit]
targets = ["app"]
exclude_dirs = ["tests"]
# B101: assert usage is intentional for internal invariants
skips = ["B101"]

